# hackathon-todo-spec-driven

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py  tasks.py
backend/app/models/: __init__.py  task.py
backend/app/schemas/: __init__.py  task.py
backend/app/services/: __init__.py  task.py
backend/tests/: conftest.py
frontend/: .gitignore  auth.ts  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/types/: index.ts
history/prompts/001-todo-app/: 0001-full-todo-app-implementation.green.prompt.md  0002-commit-pr-todo-implementation.misc.prompt.md  001-phase1-todo-spec-created.spec.prompt.md  002-spec-clarification-scan.spec.prompt.md  003-implementation-plan-created.plan.prompt.md  004-implementation-tasks-generated.tasks.prompt.md
history/prompts/002-phase-ii/: 0001-generate-phase-ii-tasks-md.tasks.prompt.md  0002-implement-phase-ii-full-stack-todo.green.prompt.md  (+4 more)
specs/001-todo-app/: constitution.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-ii/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __main__.py
src/cli/: app.py  commands.py  display.py
src/models/: task.py
src/services/: task_service.py
(+17 files in other folders)
